Ship grounded questions, self-care tracking, and interactive demo (#16)
* docs: plan the single-host operations completion

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* docs: record the real single-host production inventory

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* docs: replace the EC2 deployment design with the single-host design

Task 2 of the single-host operations completion plan. The 2026-09-10
design assumed AWS EC2/ECR/SSM/S3/Caddy and a public llm.<domain>
behind Cloudflare Access, none of which was ever built. Production
actually runs API, PostgreSQL, Ollama, and cloudflared together on one
Ubuntu laptop, verified by the 2026-09-17 inventory. Add the new
single-host design as the binding authority for the remaining
completion tasks, mark the old design as superseded without deleting
its body, and fix the README files that still described the product
as undeployed or pointed to the retired design.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* docs: fix source attribution and reflect live CORS/branch-protection gaps

Round 1 fixes for the single-host deployment design: mark the LLM
TIMEOUT facts in 2.4 as sourced outside the Task 1 inventory doc
(container log, not the inventory), rewrite the §1 domain bullet and
§3 diagram to state that app.byguardian.site now resolves via Pages
but the API still 403s its CORS preflight (byguardian.pages.dev is
the only allowed origin today, pages.dev->app redirect not in place,
completion condition 3 still pending), and replace the stale "GitHub
plan returns 403" claim with the verified current state: the
repository is public and main has no branch protection, so completion
condition 2's hosted CI gate is not enforced by branch protection.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>

* docs: state the live single-host deployment status

Add a verified "운영 상태 (2026-09-17 확인)" table to README.md (live
domains, deployed FE commit, deployed BE image lag, LLM timeout
fallback) 